# together-shell

./: .buildconfig  README.md  meson.build
data/: com.github.ZzEdovec.TogetherShell.gschema.xml  meson.build  together-shell.gresource.xml
data/icons/: meson.build
data/lib/: meson.build  style.css  together-shell.gresource.xml
data/lib/ui/: together-shell.cmb
data/ui/: level_popup.ui
po/: POTFILES.in  meson.build
src/: application.vala  config.vapi  main.vala  meson.build
src/lib/: application.vala  meson.build
src/lib/dbus/: keybinds.vala
src/lib/desktop/: background-manager.vala
src/lib/panel/: panel.vala
src/lib/panel/plugins/: meson.build
src/lib/panel/plugins/appmenu/: appmenu.vala  meson.build
src/lib/panel/plugins/appmenu/data/: appmenu.gresource.xml  meson.build
src/lib/panel/plugins/controlcenter/: control_center.vala
src/lib/panel/plugins/controlcenter/data/: connection_page.ui  control_center.ui  controlcenter.gresource.xml  meson.build  sound_page.ui
src/lib/panel/plugins/showdesktop/: meson.build  show_desktop.vala
src/lib/panel/plugins/time/: meson.build  time.vala
src/lib/panel/plugins/tray/: tray.vala  tray_widgets.vala
src/lib/panel/plugins/windowlist/: meson.build  window_list.vala
src/lib/plugins/: plugin-interface.vala  plugin-loader.vala
src/lib/shell_ui/: panel_popup.vala  popups_manager.vala
src/lib/wayfire/: ipc.vala
src/lib/wayfire/command/: bindings.vala
src/lib/wayland/: output-management.vala  outputs.vala  registry.vala  toplevel-management.vala  wf-shell.vala
src/lib/wayland/vapi/: together-dock-dodge-v1.vapi  wayfire-shell-unstable-v2.vapi  wayland-client.vapi  wlr-foreign-toplevel-management-unstable-v1.vapi
src/managers/: appinfo-manager.vala  popups-manager.vala
src/plugins/: meson.build
src/plugins/appmenu/: appmenu.vala
src/plugins/appmenu/data/: app_menu.cmb  app_menu.ui
src/plugins/controlcenter/: meson.build
src/plugins/controlcenter/data/: control_center.cmb  power_page.ui
src/plugins/controlcenter/pages/: connection_page.vala  sound_page.vala  wireless_page.vala
src/plugins/showdesktop/: show_desktop.vala
src/plugins/tray/: meson.build
src/plugins/windowlist/: meson.build  window-button.vala  window-indicator.vala  window-list.plugin  window-list.vala
src/widgets/: background.vala  level-popup.vala  panel-popup.vala  panel.vala
subprojects/libtogether-core/: config.vapi  meson.build
subprojects/libtogether-core/src/: config.vala.in  meson.build
subprojects/libtogether-core/src/interfaces/shell/: plugin-interface.vala
subprojects/libtogether-core/src/managers/: appinfo-manager.vala  plugins-manager.vala
subprojects/libtogether-core/src/settings/: shell.vala
subprojects/libtogether-shell-plugin-api/: meson.build
subprojects/libtogether-shell-plugin-api/src/: plugin-interface.vala
subprojects/libtogether-wayfire/: meson.build
subprojects/libtogether-wayfire/src/: ipc.vala  meson.build
subprojects/libtogether-wayfire/src/command/: bindings.vala
subprojects/libtogether-wayland/: meson.build
subprojects/libtogether-wayland/src/: meson.build  outputs.vala  registry.vala  toplevel.vala  wf-shell.vala
subprojects/libtogether-wayland/src/vapi/: together-dock-dodge-v1.vapi  wayland-client.vapi
subprojects/libtogether-wayland/src/wayfire/: bindings.vala  ipc.vala  view.vala
subprojects/libtogether-widgets/: meson.build
subprojects/libtogether-widgets/src/: draggable-area.vala  meson.build
